# escher_maud

./: README.rst  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
escher_maud/: builder_ext.py  vis.py
escher_maud/templates/: standalone.html
tests/: conftest.py  test_integration.py  test_template.py
tests/data/: map_escher_iclau786.json
tests/data/maud_output_c747bcd761/: idata.nc
tests/data/maud_output_c747bcd761/samples/: coords.json  inits.json  input_data.json  model-202111231534-1-stderr.txt  model-202111231534-1-stdout.txt  model-202111231534-1.csv  model-202111231534-2-stderr.txt  model-202111231534-2-stdout.txt  model-202111231534-2.csv  model-202111231534-3-stderr.txt  model-202111231534-3-stdout.txt  model-202111231534-3.csv  model-202111231534-4-stdout.txt  model-202111231534-4.csv
