[tool.poetry]
name = "escher_maud"
version = "0.1.0"
description = "Custom tooltip extension for escher to contextualize posterior distributions from Maud."
authors = ["carrascomj <carrascomurielj@gmail.com>"]
license = "GLP-3.0"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
# latest markupsafe pulled by Jinja2 is not compatible with Jinja2
markupsafe = "^1.1.0"
Escher = "^1.7.3"
Jinja2 = "2.7.3,<3"
arviz = "^0.11.4"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = ">=4.0.1,<5"
isort = "^5.10.1"
black = "^21.11b1"
flake8 = "^4.0.1"
flake8-bugbear = "^21.11.29"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
escher_maud = 'escher_maud.vis:main'
